@@ -24,6 +24,7 @@
 #include "config.h"
 #include "system.h"
 #include "coretypes.h"
+#include "symtab.h"
 #include "hashtab.h"
 #include "hash-set.h"
 #include "vec.h"
@@ -39,7 +40,6 @@
 #include "real.h"
 #include "fixed-value.h"
 #include "alias.h"
-#include "symtab.h"
 #include "wide-int.h"
 #include "inchash.h"
 #include "tree.h"
